--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -5,7 +5,7 @@ license = "AGPL v3"
 modId = "prioritytarget"
 version = "1.0.0"
 displayName = "PriorityTarget"
-credits = ""
+credits = "Idea from the World of Warships game"
 authors = "Tapio"
 description = '''
 '''
