--- a/gradle.properties
+++ b/gradle.properties
@@ -28,7 +28,7 @@ mapping_version=1.19.2
 # Must match the String constant located in the main mod class annotated with @Mod.
 mod_id=prioritytarget
 # The human-readable display name for the mod.
-mod_name=prioritytarget
+mod_name=PriorityTarget
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=GNU AGPL v3
 # The mod version. See https://semver.org/
